<resources>
    <string name="app_name">ZHONGLI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新数据</string>
    <string name="pull_to_refresh_refreshing_label">正在加载...</string>
    <string name="pull_to_refresh_from_bottom_pull_label">正在加载...</string>
    <string name="pull_to_refresh_from_bottom_release_label">正在加载...</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在加载...</string>

    <string name="button_logout">退出登录</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
