<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/albumback"
    >

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/showallphoto_headview"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/px_45"
        android:background="@drawable/plugin_camera_title_bar" 
        android:gravity="center_vertical"
        >
        <Button
            android:background="@drawable/plugin_camera_title_btn_back"
            android:layout_marginTop="@dimen/px_5"
            android:layout_marginBottom="@dimen/px_5"
            android:layout_width="@dimen/px_70"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/px_14"
            android:textColor="#fff"
            android:id="@+id/showallphoto_back"
            android:text="@string/album"
            />
         <TextView
            android:id="@+id/showallphoto_headtitle"
            android:layout_width="wrap_content" 
       		android:layout_height="wrap_content" 
       		android:text="@string/photo"
       		android:layout_centerInParent="true"
       		android:singleLine="true"
       		android:textSize="@dimen/px_20"
			android:textColor="#ffffff"
            />
        
        <Button
            android:layout_width="@dimen/px_67"
      	    android:layout_height="wrap_content"
      	    android:layout_alignParentRight="true" 
      	    android:layout_centerVertical="true"
      	    android:layout_marginRight="@dimen/px_5"
            android:id="@+id/showallphoto_cancel"
            android:text="@string/camera_cancel"
            android:textColor="#fff"
        	android:textSize="@dimen/px_15"
			android:background="@drawable/plugin_camera_title_btn_cancel"
            />
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/showallphoto_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_50"
        android:layout_alignParentBottom="true"
        android:background="@drawable/plugin_camera_bottom_bar" >

        <Button
            android:id="@+id/showallphoto_preview"
            android:layout_width="@dimen/px_90"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_10"
            android:text="@string/preview"
            android:background="@drawable/plugin_camera_title_btn_preview"
            />
        <Button
            android:id="@+id/showallphoto_ok_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/px_10"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/unfinished"
            android:background="@drawable/plugin_camera_ok_btn_state"
            android:gravity="center"
            />
    </com.zhy.autolayout.AutoRelativeLayout>

    <GridView
        android:id="@+id/showallphoto_myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/showallphoto_bottom_layout"
        android:layout_below="@id/showallphoto_headview"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/px_2"
        android:horizontalSpacing="@dimen/px_10"
        android:numColumns="4"
        android:verticalSpacing="@dimen/px_10"
        android:background="@color/albumback" />

    <ProgressBar
        android:id="@+id/showallphoto_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</com.zhy.autolayout.AutoRelativeLayout>